fix(styles): correctly handle visiblity of covered mobile nav sections

--- a/packages/styles/scss/components/_navigation.scss
+++ b/packages/styles/scss/components/_navigation.scss
@@ -214,6 +214,10 @@
       direction: rtl;
     }
 
+    .ilo--subnav--open & {
+      visibility: hidden;
+    }
+
     @include breakpoint("large") {
       display: flex;
       justify-content: space-between;
